Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9968

[C++] UBSAN link failure with __int8_t

    XMLWordPrintableJSON

Details

    Description

      See https://github.com/apache/arrow/runs/1093237142 :

      src/arrow/util/CMakeFiles/arrow-utility-test.dir/decimal_test.cc.o: In function `arrow::Decimal128Test_Multiply_Test::TestBody()':
      /arrow/cpp/src/arrow/util/decimal_test.cc:935: undefined reference to `__muloti4'
      clang: error: linker command failed with exit code 1 (use -v to see invocation)
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m