ARROW-9968: [C++] Fix UBSAN build

Native __int128_t gives link failures on clang with UBSAN enabled, revert to Boost in that case.